[package]
name = "fog-pack"
version = "0.1.1"
authors = ["Scott Teal"]
readme = "README.md"
keywords = [ "fog-pack", "validator", "serialization", "deserialization" ]
categories = [ "encoding" ]
repository = "https://github.com/Cognoscan/fog-pack"
homepage = "https://github.com/Cognoscan/fog-pack"
documentation = "https://docs.rs/fog-pack"
license = "MIT OR Apache-2.0"
description = "Binary Data format supporting immutable references, schema, and compression"
exclude = [ "media/*", "misc_docs/*" ]
edition = "2018"

[dependencies]
#fog-crypto = "0.3"
fog-crypto = { git = "https://github.com/Cognoscan/fog-crypto", branch = "main" }
byteorder = "1"
num-traits = "0.2"
regex = "1"
ieee754 = "0.2.6"
zstd-safe = "3.0"
bytecount = "0.6.0"
unicode-normalization = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"

[[bench]]
name = "log"
harness = false

