[package]
name = "fog-pack"
version = "0.2.2"
authors = ["Scott Teal"]
readme = "README.md"
keywords = [ "fog-pack", "validator", "serialization", "deserialization" ]
categories = [ "encoding" ]
repository = "https://github.com/Cognoscan/fog-pack"
homepage = "https://github.com/Cognoscan/fog-pack"
documentation = "https://docs.rs/fog-pack"
license = "MIT OR Apache-2.0"
description = "Binary Data format supporting immutable references, schema, and compression"
exclude = [ "media/*", "misc_docs/*" ]
edition = "2021"

[dependencies]
fog-crypto = "0.4.3"
byteorder = "1"
regex = "1"
zstd-safe = "3.0"
bytecount = "0.6.0"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
futures-core = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
futures-executor = "0.3"
futures-util = "0.3"

[[bench]]
name = "log"
harness = false

